<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            style="@style/NowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/now_playing"
            android:text="@string/highlights" />

        <ImageView
            android:contentDescription="@string/album_cover"
            android:id="@+id/album_cover"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_image"
            android:padding="@dimen/activity_vertical_margin"
            android:src="@drawable/highlight_band" />

        <TextView
            style="@style/About"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/highlighted_artist"
            android:textStyle="bold" />

        <TextView
            style="@style/About"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about" />

        <Button
            android:id="@+id/playHighlightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:text="@string/play_highlight" />

        <TextView
            style="@style/NowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/now_playing"
            android:text="@string/library" />


        <TextView
            android:id="@+id/garage"
            style="@style/CategoryStyle"
            android:background="@color/radio_one"
            android:text="@string/category_garage" />

        <TextView
            android:id="@+id/punk"
            style="@style/CategoryStyle"
            android:background="@color/radio_two"
            android:text="@string/category_punk" />

        <TextView
            android:id="@+id/psychedelic"
            style="@style/CategoryStyle"
            android:background="@color/radio_one"
            android:text="@string/category_psychedelic" />
    </LinearLayout>

</ScrollView>